# metakit

./: CHANGES  MetaKit.html  README  WHATSNEW
demos/: demo.cpp  dump.cpp  myio.cpp  struct.cpp
doc/: python.html  tcl.html
examples/: README  mapped.tcl  mkbug.cpp  slow.tcl
include/: mk4.h  mk4.inl  mk4dll.h  mk4io.h  mk4str.h  mk4str.inl
lua/: luna2.h  mk4lua.cpp
mac/: cw.mcp.xml  cw.sea.hqx  cw5.mcp  cw5tcl.mcp
python/: MkMemoIO.py  PyHead.h  PyProperty.cpp  PyProperty.h  PyRowRef.cpp  PyRowRef.h  PyStorage.cpp  PyStorage.h  PyView.cpp  PyView.h  README-dmn  metakit.py  setup.py
src/: borc.h  column.cpp  column.h  column.inl  custom.cpp  custom.h  derived.cpp  derived.h  doxy.h  field.cpp  field.h  field.inl  fileio.cpp  format.cpp  format.h  gnuc.h  handler.cpp  handler.h  handler.inl  header.h  mfc.h  msvc.h  mwcw.h  persist.cpp  persist.h  remap.cpp  remap.h  std.cpp  std.h  store.cpp  store.h  store.inl  string.cpp  table.cpp  univ.cpp  univ.h  univ.inl  view.cpp  viewx.cpp  win.h
tcl/: Makefile.in  config.h.in  configure  configure.ac  configure.in  iohan.tcl  mk4tcl.cpp  mk4tcl.h  mk4too.cpp  mkshow.tcl  mksql.tcl
tests/: regress.cpp  regress.h  tbasic1.cpp  tbasic2.cpp  tbasics.cpp  tcusto1.cpp  tcusto2.cpp  tdiffer.cpp  textend.cpp  tformat.cpp  tlimits.cpp  tmapped.cpp  tnotify.cpp  tresize.cpp  tstore1.cpp  tstore2.cpp  tstore3.cpp  tstore4.cpp  tstore5.cpp
unix/: Doxyfile  Makefile.in  config.h.in  configure  configure.in
unix/.svn/: entries
unix/.svn/text-base/: Doxyfile.svn-base  Makefile.in.svn-base  configure.in.svn-base  configure.svn-base
unix/scripts/: config.guess  ltmain.sh
unix/scripts/.svn/: entries
(+161 files in other folders)
